--- a/docs/bundle/_config.yml
+++ b/docs/bundle/_config.yml
@@ -1,11 +1,12 @@
-title: Scott's Website
-email: scotthadzik@weber.edu
+title: Kelly's CS 1030 Website
+email: kellycorwin@mail.weber.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm the dude playin' a dude disquised as another dude... 
+  I'm also a Software Engineer pursinging a CS major at Weber State University.
+  I'm a married father of three boys, avid gamer, and practionor of Kendo and Iaido. 
+  www.linkedin.com/in/kelly-corwin-36449a165
 logo: "/assets/images/logo.png"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
-theme: "jekyll-theme-minimal"
+theme: "jekyll-theme-midnight"
