--- a/docs/bundle/_config.yml
+++ b/docs/bundle/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Life caught up and I stopped attending, but I picked up my sword again in earnest in 2015. 
   I began training regularly, practiced at home during the pandemic, and now I'm leading other students. 
   At the moment I hold the rank of Nidan, equivalent to 2nd degree black-belt in other disiplines. 
-  This past summer I attended a seminar where I got to meet Dr. Alexander Bennett and began practicing
+  This past summer I attended a seminar where I got to meet Alexander Bennett PhD and began practicing
   a two sword style called Nito-Ryu inspired by Miyamoto Musashi. I have taken to it quite well
   and my goal is to compete in my next tournament using this style to further hone my skills. 
 logo: "/docs/bundle/assets/images/Kelly_Corwin.jpeg"
@@ -14,4 +14,4 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-remmote-theme
+  - jekyll-remote-theme
