--- a/docs/bundle/_config.yml
+++ b/docs/bundle/_config.yml
@@ -1,8 +1,8 @@
-title: Why's Kelly Doing Kendo?
+title: This Is "The Way"
 email: kellycorwin@mail.weber.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  My first experience with Kendo was pretty typical. A room fool of people wearing weird clothes, shouting like maniacs, hitting each other with sticks. First impression is usually "What the hell am I even looking at?". 
-  Over a decade later I am proudly one of those weirdos, and I'm happy to explain why we do what we don. 
+  Imagine walking into a room with people screaming, wearing strange clothes, hitting each other with sticks. 
+  Sound fun? Well it is, and after years of training and persistence I've become marginally good at it. Always room for improvement, but that's the point. 
 logo: "/assets/images/Kelly_Corwin.jpeg"
 baseurl: "my-first-website-Kelly-Corwin" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
