--- a/docs/bundle/_config.yml
+++ b/docs/bundle/_config.yml
@@ -7,6 +7,6 @@ logo: "/assets/images/Kelly_Corwin.jpeg"
 baseurl: "my-first-website-Kelly-Corwin" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
-remote_theme: pages-themes/chirpy  # minimal@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
