--- a/docs/bundle/_config.yml
+++ b/docs/bundle/_config.yml
@@ -1,21 +1,12 @@
 title: This is "The Way"
 email: kellycorwin@mail.weber.edu
-description: >-
-  Imagine walking into a room, people screaming, wearing strange clothes, hitting each other with sticks.
-  Sound fun? Well it is, and after years of training and persistence I've become marginally good at it. Always room for improvement, but that's the point.
-
-baseurl: "/my-first-website-Kelly-Corwin"
-url: ""
-
-# Chirpy theme settings
-theme: jekyll-theme-chirpy
-avatar: "/assets/images/Kelly_Corwin.jpeg"
-tagline: "Kelly's Kendo Journey"
-
-theme_mode: # leave blank for auto (light/dark based on user preference)
-
-toc: true
-paginate: 10
-
+description: >- # this means to ignore newlines until "baseurl:"
+  Imagine walking into a room, people screaming, wearing strange clothes, hitting each other with sticks. 
+  Sound fun? Well it is, and after years of training and persistence I've become marginally good at it. Always room for improvement, but that's the point. 
+logo: "/assets/images/Kelly_Corwin.jpeg"
+baseurl: "my-first-website-Kelly-Corwin" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# Build settings
+remote_theme: pages-themes/chirpy
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
